--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ eventlet==0.25.2
 flask-socketio==4.3.0
 flask==1.1.2
 greenlet==0.4.16
+gunicorn==20.0.4
 itsdangerous==1.1.0
 jinja2==2.11.2
 markupsafe==1.1.1
